# task_04

./: .env  Cargo.toml  README.md  deny.toml  test.rest
.sqlx/: query-265e3270afc9bd0480bc82e3398937ae951ebe03144c88ae3fbc6f1f0d7a25cf.json
examples/: axum-sse.html  axum-sse.rs  sqlx-migrate.rs  sqlx_query.rs  task_1_chat.rs  task_2_shortener.rs  tower-axum.rs  tower-basic.rs  tower-timeout.rs
migrations/: 2024053101_migrate_demo.sql  2024060101_shortener.sql
queries/: get_all_demo_records.sql
