[package]
name = "template"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
pin-project = "1.1.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net","time","sync"] }
tower = { version = "0.4.13", features = ["futures-util", "util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
